# MedDay

./: Meds.cabal  config.json  stack.yaml
.github/workflows/: branch_builds.yml  haskell.yml  release.yml
app/: Main.hs  config.ini
src/: Lib.hs  Meds.hs
src/Meds/: App.hs  Calendar.hs  Config.hs  Main.hs
test/: Main.hs
test/Meds/: Tests.hs
