cabal-version:       3.0
name:                Meds
version:             0.1.0.0
author:              Sara Fransson
maintainer:          franssonkai@gmail.com
copyright:           2017 Sara Fransson
build-type:          Simple
extra-source-files:
  README.md
data-files:
  config.json

common globals
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module
    -Wno-implicit-prelude
    -Werror
    -O2

library
  import: globals
  hs-source-dirs:
    src
  exposed-modules:
    Meds
    Meds.App
    Meds.Config
    Meds.Main
  build-depends:
    , aeson
    , base
    , mtl
    , natural-transformation
    , time
  default-language:
    Haskell2010
  other-modules:
    Paths_Meds

test-suite Meds-tests
  type:                 exitcode-stdio-1.0
  main-is:
    Meds/Tests.hs
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  build-depends:
    , Meds

    , base
    , time
    , hedgehog

executable Meds-exe
  import: globals
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , Meds
  default-language:    Haskell2010
