cabal-version:       3.0
name:                Meds
version:             0.1.0.0
author:              Sara Fransson
maintainer:          franssonkai@gmail.com
copyright:           2017 Sara Fransson
build-type:          Simple
extra-source-files:
  README.md
data-files:
  config.json

common globals
  ghc-options:
    -Wall
    -Werror
    -Wredundant-constraints
    -Wpartial-fields
    -fhide-source-paths

library
  import: globals
  hs-source-dirs:
    src
  exposed-modules:
    Meds
    Meds.App
    Meds.Calendar
    Meds.Config
    Meds.Main
  build-depends:
    , aeson
    , base
    , mtl
    , natural-transformation
    , time
    , bytestring
  default-language:
    Haskell2010
  other-modules:
    Paths_Meds

test-suite Meds-tests
  type:                 exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Meds.Tests
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  build-depends:
    , Meds

    , base
    , time
    , transformers
    , hedgehog

executable Meds-exe
  import: globals
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , Meds
  default-language:    Haskell2010
